--- a/package.json
+++ b/package.json
@@ -62,5 +62,6 @@
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
-  ]
+  ],
+  "serve": "vue-cli-service serve --host localhost --port 8080 --open"
 }
